tests/cases/scc/error/0020-storage4.c.res
./tests/cases/scc/error/0020-storage4.c:5:12:	error:   cannot have multiple storage modifiers.
exit code 1
